# tdg-devops-test

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  conanfile.py
.devcontainer/: devcontainer.json
.teamcity/: BuildSteps.kt  pom.xml  settings.kts
iac/agent/: agent.tf  cloud-init.yaml.tpl  variables.tf
iac/project/: main.tf  variables.tf
src/app/: CMakeLists.txt  main.cpp
src/lib/: CMakeLists.txt  calculator.cpp  calculator.h
test_package/: CMakeLists.txt  conanfile.py  test_package.cpp
tests/: CMakeLists.txt  calculator_test.cpp
